# RootAI

./: .gitignore  CHANGELOG.md  CODE_REVIEW_FIXES.md  CONTRIBUTING.md  DATA_LICENSES.md  DEPLOYMENT.md  Dockerfile  Dockerfile.gpu  EXAMPLES.md  LICENSE  OFFLINE_CI_IMPLEMENTATION.md  PROJECT_SUMMARY.md  PR_SUMMARY.md  README.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  rootai_cli.py  setup.sh  test_quick.sh
.github/workflows/: ci.yml
api/: fastapi_app.py
benchmarks/: semantic_mmlu.py
data/: fetch.sh  fetch_dictionaries.sh
data/dictionaries/: README.md
experiments/: holmes_adapter.py  mmlu_run.py
results/: METHODOLOGY.md
src/: __init__.py
src/api/: __init__.py
src/core/: __init__.py  graph_sharding.py  root_reasoner.py  semantic_grounding.py
src/rootai/: __init__.py
src/rootai/api/: __init__.py
src/rootai/core/: build_root_graph.py  root_reasoner.py
src/rootai/data/: __init__.py  parse_wiktextract.py  pull_dictionaries.py  schema.py
tests/: __init__.py  test_core.py  test_hybrid.py  test_wiktextract_parse.py
