[build-system]
requires = ["setuptools>=65.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rootai"
version = "3.0.1"
description = "RootAI v3.0: Root graphs + T5/GPT hybrid reasoning"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "RootAI Team"}]
dependencies = [
  "camel-tools>=1.5.0",
  "transformers>=4.30.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic>=2.0.0",
  "numpy>=1.24.0",
  "sentencepiece>=0.1.99",
  "httpx>=0.24.0"
]

[project.optional-dependencies]
cpu = ["faiss-cpu>=1.7.4"]
gpu = ["torch>=2.0.0","faiss-gpu>=1.7.4","accelerate>=0.20.0","bitsandbytes>=0.41.0"]
gpt = ["openai>=1.0.0"]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.7.0",
  "ruff>=0.0.280",
  "mypy>=1.4.0",
]

[project.scripts]
rootai = "rootai_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rootai*"]

[tool.setuptools.package-dir]
"" = "src"

[project.urls]
Homepage = "https://github.com/tattoosonmyskin/RootAI"
Repository = "https://github.com/tattoosonmyskin/RootAI"
Documentation = "https://github.com/tattoosonmyskin/RootAI"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
